--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 Config{
     RegEx = "[\\d]+",
     StartTime = "23:51:59.824",
-    EndTime = "23:53:23.748"
+    EndTime = "23:53:23.748",
+    NumberOfReducer = 2
 }
